--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "daisyui": "latest",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
